first proposal content

--- a/index.html
+++ b/index.html
@@ -87,18 +87,29 @@
       
       <section>
         <h2>Books I read</h2>
-        <p>Development and design is my real passion so I’m more than happy to sacrifice some free time to learn more about it. I only mention the most inspiring books.</p>
+        <p>Development and design is my real passion so I’m more than happy to sacrifice some free time to learn more about it. I only mention the 5 most inspiring books since I tend to read a new book every three weeks.</p>
         <ul>
-          <li>Better web typography, Matej Latin; I l</li>
+          <li>Better web typography, Matej Latin; Web design is 90% typography so we must give it appropiate attention. I learned how to make the ‘perfect’ paragraph and how to get vertical and horizontal rhytm right through macro/micro typography.</li>
+          <li>You Don’t know JS series, Kyle Simpson; Truely understanding how JavaScript works can be  the difference between a good and a great developer. Thanks to Kyle I’m more confident when writing JavaScript code.</li>
+          <li>Form Design Patterns, Adam Silver; Forms are hard for both developers and users. With the mentioned design patterns I was able to create much simpler forms then before.</li>
+          <li>Clean Code, Robert C. Martin; Because of this book it’s my daily work goal to make my code as explicit as possible.</li>
+          <li>Atomic Design, Brad Frost; After reading this book I started structuring my UI components with Atomic Design in mind which makes a lot of sense in my personal opinion.</li>
         </ul>
       </section>
       <section>
         <h2>Conferences I went to</h2>
+        <p>I’m always looking for the next interesting conference. It has every time been a great learning experience and a good way to meet people within the industry.</p>
+        <ul>
+          <li>DotJS, Paris; An impressive one track conference, especially the talks from TC39 were insightfull.</li>
+          <li>Full Stack Europe, Antwerp; Getting some new ideas and concepts from accross the stack.</li>
+          <li>Perf matters, San Francisco; At this conference they explained how to build performant frontends which is a critical part of the user experience.</li>
+          <li>Design systems, London; Some good examples how a proper design system should be build and how to start one in your own company.</li>
+        </ul>
       </section>
       <section>
         <h2>Contact me</h2>
         <p>When you contact me please give me a good reason why I would be a good match. Don’t just give me a job description with a matching tech stack, I’m a human not a computer.</p>
-        <p>You can reach by email <a href="mailto:lennert_vansever@hotmail.be">lennert_vansever@hotmail.be</a>, telephone <a href="tel:+32 489 47 1063">+32 489 47 1063</a> or <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a>.</p>
+        <p>You can reach me by email <a href="mailto:lennert_vansever@hotmail.be">lennert_vansever@hotmail.be</a>, telephone <a href="tel:+32 489 47 1063">+32 489 47 1063</a> or <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a>.</p>
       </section>
     </article>
   </body>
