--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>Portfolio</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style/index.css">
   </head>
 
   <body>
@@ -21,7 +22,8 @@
         <h1>Portfolio</h1>
       </header>
       <section>
-        <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. As a developer I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
+        <img src="./images/profile.jpg" id="profile">
+        <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
         <p>This portfolio website is completementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
       </section>
       <section>
@@ -61,16 +63,16 @@
         <section>
           <h3>Erasmus+ Digital Tools - European University Foundation</h3>
           <img src="./images/erasmus.png" width="100%" alt="Erasmus+ promotion used in the Erasmus+ app" />
-          <p>As an Erasmus student I was with the annoyed how inefficient the administration of the Erasmus+ program was. I decided to do something about it with my bachelor thesis: Digitizing the Erasmus+ programme. I contacted the European Commission with my initial idea and they send it through to the <a href="https://uni-foundation.eu">European University Foundation</a> who then mentored my bachelor thesis.</p>
+          <p>As an Erasmus student I was annoyed how inefficient the administration of the Erasmus+ program was. I decided to do something about it with my bachelor thesis: Digitizing the Erasmus+ programme. I contacted the European Commission with my initial idea and they send it through to the <a href="https://uni-foundation.eu">European University Foundation</a> who then mentored my bachelor thesis.</p>
           <p>Eventually they decided to hire me so that I could work further on my project. After 2 months we had a proposal to create the <a href="https://erasmusapp.eu"> Erasmus+ app</a>. The European Commission agreed to fund it and after 8 months it was developed and <a href="https://ec.europa.eu/commission/presscorner/detail/en/IP_17_1574">released to the world</a>. With 40 000 downloads I was happy with the results but it was only usefull for students and not universities so afterwards I build the <a href="https://www.erasmus-dashboard.eu">Erasmus+ dashboard</a> to help them with their mobility administration.</p>
           <p>For both applications I was the only developer so I was responsible for the design, frontend, back end and data management. For the development I used ReactJS, MeteorJS, Cordova, NodeJS, GraphQL, MongoDB and MySQL.</p>
         </section>
       </section>
       <section>
         <h2>Technologies I used</h2>
-        <p>I enjoy combining my frontend, backend and UI/UX design skills to create usefull web applications. However, most of my time is spend on frontend technologies but it’s still essential to learn from the other fields</p>
+        <p>I enjoy combining my frontend, backend and UI/UX design skills to create usefull web applications. However, most of my time is spend on frontend technologies but I think it’s still essential to learn from the other fields</p>
         <section>
-          <h3>frontend development</h3>
+          <h3>Frontend development</h3>
           <p>I started creating my first web applications in 2013 with only <b>HTML</b> and <b>CSS</b>. Back then responsive web design was all the rage so even my first creations had responsive layouts.</p>
           <p>Today I primarily use <b>ReactJS</b> with Styled Components and hooks. For state management I tend to switch between Redux and Apollo local state management. In the future I would like to learn TypeScript and maybe Flutter. I highly value performance, accessibility, and best practices so I often use Google Lighthouse to score my websites.</p>
         </section>
