--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <h1>Portfolio</h1>
       </header>
       <section>
-        <img src="./images/profile.jpg" id="profile">
+        <picture>
+          <source srcset="./images/profile.webp" type="image/webp">
+          <source srcset="./images/profile.jpg" type="image/jpeg">
+          <img src="./images/profile.jpg"  id="profile">
+        </picture>
         <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
         <p>This portfolio website is completementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
       </section>
@@ -62,7 +66,11 @@
         </section>
         <section>
           <h3>Erasmus+ Digital Tools - European University Foundation</h3>
-          <img src="./images/erasmus.png" width="100%" alt="Erasmus+ promotion used in the Erasmus+ app" />
+          <picture>
+            <source srcset="./images/erasmus.webp" type="image/webp">
+            <source srcset="./images/erasmus.png" type="image/png">
+            <img width="100%" src="./images/erasmus.png" alt="Erasmus+ promotion used in the Erasmus+ app">
+          </picture>
           <p>As an Erasmus student I was annoyed how inefficient the administration of the Erasmus+ program was. I decided to do something about it with my bachelor thesis: Digitizing the Erasmus+ programme. I contacted the European Commission with my initial idea and they send it through to the <a href="https://uni-foundation.eu">European University Foundation</a> who then mentored my bachelor thesis.</p>
           <p>Eventually they decided to hire me so that I could work further on my project. After 2 months we had a proposal to create the <a href="https://erasmusapp.eu"> Erasmus+ app</a>. The European Commission agreed to fund it and after 8 months it was developed and <a href="https://ec.europa.eu/commission/presscorner/detail/en/IP_17_1574">released to the world</a>. With 40 000 downloads I was happy with the results but it was only usefull for students and not universities so afterwards I build the <a href="https://www.erasmus-dashboard.eu">Erasmus+ dashboard</a> to help them with their mobility administration.</p>
           <p>For both applications I was the only developer so I was responsible for the design, frontend, back end and data management. For the development I used ReactJS, MeteorJS, Cordova, NodeJS, GraphQL, MongoDB and MySQL.</p>
