configuring internal links

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <body>
     <nav>
       <ul>
-        <li><a>Introduction</a></li>
-        <li><a>Projects I worked on</a></li>
-        <li><a>Technologies I used</a></li>
-        <li><a>Books I read</a></li>
-        <li><a>Conferences I went to</a></li>
-        <li><a>Contact me</a></li>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#projects">Projects I worked on</a></li>
+        <li><a href="#technologies">Technologies I used</a></li>
+        <li><a href="#books">Books I read</a></li>
+        <li><a href="#conferences">Conferences I went to</a></li>
+        <li><a href="#contact">Contact me</a></li>
       </ul>
     </nav>
     <article>
       <header>
         <h1>Portfolio</h1>
       </header>
-      <section>
+      <section id="introduction">
         <picture>
           <source srcset="./images/profile.webp" type="image/webp">
           <source srcset="./images/profile.jpg" type="image/jpeg">
@@ -30,7 +30,7 @@
         <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
         <p>This portfolio website is completementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
       </section>
-      <section>
+      <section id="projects">
         <h2>Projects I worked on</h2>
         <p>So far I have only worked on a project basis. Most projects took around 6 months up to a year to be developed, although a project is never really finished. Everytime I worked together with a small team of 2 up to 6 great people, keep that in mind since I don’t want to take all the credit.</p>
         <section>
@@ -76,7 +76,7 @@
           <p>For both applications I was the only developer so I was responsible for the design, frontend, back end and data management. For the development I used ReactJS, MeteorJS, Cordova, NodeJS, GraphQL, MongoDB and MySQL.</p>
         </section>
       </section>
-      <section>
+      <section id="technologies">
         <h2>Technologies I used</h2>
         <p>I enjoy combining my frontend, backend and UI/UX design skills to create usefull web applications. However, most of my time is spend on frontend technologies but I think it’s still essential to learn from the other fields</p>
         <section>
@@ -95,7 +95,7 @@
         </section>
       </section>
       
-      <section>
+      <section id="books">
         <h2>Books I read</h2>
         <p>Development and design is my real passion so I’m more than happy to sacrifice some free time to learn more about it. I only mention the 5 most inspiring books since I tend to read a new book every three weeks.</p>
         <ul>
@@ -106,7 +106,7 @@
           <li>Atomic Design, Brad Frost; After reading this book I started structuring my UI components with Atomic Design in mind which makes a lot of sense in my personal opinion.</li>
         </ul>
       </section>
-      <section>
+      <section id="conferences">
         <h2>Conferences I went to</h2>
         <p>I’m always looking for the next interesting conference. It has every time been a great learning experience and a good way to meet people within the industry.</p>
         <ul>
@@ -116,7 +116,7 @@
           <li>Design systems, London; Some good examples how a proper design system should be build and how to start one in your own company.</li>
         </ul>
       </section>
-      <section>
+      <section id="contact">
         <h2>Contact me</h2>
         <p>When you contact me please give me a good reason why I would be a good match. Don’t just give me a job description with a matching tech stack, I’m a human not a computer.</p>
         <p>You can reach me by email <a href="mailto:lennert_vansever@hotmail.be">lennert_vansever@hotmail.be</a>, telephone <a href="tel:+32 489 47 1063">+32 489 47 1063</a> or <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a>.</p>
