adding alt text

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </nav>
     <article>
       <header>
-        <h1>Portfolio</h1>
+        <h1 >Portfolio</h1 >
       </header>
       <section id="introduction">
         <picture>
           <source srcset="./images/profile.webp" type="image/webp">
           <source srcset="./images/profile.jpg" type="image/jpeg">
-          <img src="./images/profile.jpg"  id="profile">
+          <img src="./images/profile.jpg" alt="profile picture Lennert Van Sever" id="profile">
         </picture>
         <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
         <p>This portfolio website is completementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
