--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Portfolio</title>
+    <title>Portfolio | Lennert Van Sever</title>
+    <meta name="description" content="Web developer with 4 years of professional experience. Feel free to checkout my projects!" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="./images/profile-big.jpg">
     <style>
       * {
         margin: 0;
