--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="description" content="Web developer with 4 years of professional experience. Feel free to checkout my projects!" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="images/profile-big.jpg">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
     <style>
       * {
         margin: 0;
         padding: 0;
       }
       body {
-        font-family: 'Georgia', 'Times New Roman', Times, serif;
+        font-family: 'Lato', sans-serif;
         padding: 12px 24px;
         color: #454545;
       }
