attempt to async load font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="description" content="Web developer with 4 years of professional experience. Feel free to checkout my projects!" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="images/profile-big.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+    <script>
+      WebFont.load({
+         google: {
+           families: [
+             'Lato:400,700'
+           ]
+         }
+       });
+     </script>
     <style>
       * {
         margin: 0;
