--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         src: url('fonts/LatoLatin-Regular.woff2') format('woff2'), 
              url('fonts/LatoLatin-Regular.woff') format('woff'),
              url('fonts/LatoLatin-Regular.ttf')  format('truetype');
+        font-display: swap;
       }
       @font-face {
         font-family: 'Lato';
@@ -21,6 +22,7 @@
         src: url('fonts/LatoLatin-Bold.woff2') format('woff2'), 
              url('fonts/LatoLatin-Bold.woff') format('woff'),
              url('fonts/LatoLatin-Bold.ttf')  format('truetype');
+        font-display: swap;
       }
       * {
         margin: 0;
