--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="images/profile-big.jpg">     
     <style>
-      @font-face {
+      /* @font-face {
         font-family: 'Lato';
         font-weight: normal;
         src: url('fonts/LatoLatin-Regular.eot');
         src: url('fonts/LatoLatin-Regular.woff2') format('woff2'), 
              url('fonts/LatoLatin-Regular.woff') format('woff'),
              url('fonts/LatoLatin-Regular.ttf')  format('truetype');
-        font-display: swap;
+        font-display: optional;
       }
       @font-face {
         font-family: 'Lato';
@@ -22,14 +22,14 @@
         src: url('fonts/LatoLatin-Bold.woff2') format('woff2'), 
              url('fonts/LatoLatin-Bold.woff') format('woff'),
              url('fonts/LatoLatin-Bold.ttf')  format('truetype');
-        font-display: swap;
-      }
+        font-display: optional;
+      } */
       * {
         margin: 0;
         padding: 0;
       }
       body {
-        font-family: 'Lato', sans-serif;
+        font-family: 'Lato', Georgia, 'Times New Roman', Times, serif;
         padding: 12px 24px;
         color: #454545;
       }
