--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         padding: 0;
       }
       body {
-        font-family: 'Lato', Georgia, 'Times New Roman', Times, serif;
+        font-family: Verdana, Georgia, serif;
         padding: 12px 24px;
         color: #454545;
       }
