--- a/index.html
+++ b/index.html
@@ -6,30 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="images/profile-big.jpg">     
     <style>
-      /* @font-face {
-        font-family: 'Lato';
-        font-weight: normal;
-        src: url('fonts/LatoLatin-Regular.eot');
-        src: url('fonts/LatoLatin-Regular.woff2') format('woff2'), 
-             url('fonts/LatoLatin-Regular.woff') format('woff'),
-             url('fonts/LatoLatin-Regular.ttf')  format('truetype');
-        font-display: optional;
-      }
-      @font-face {
-        font-family: 'Lato';
-        font-family: bold;
-        src: url('fonts/LatoLatin-Bold.eot');
-        src: url('fonts/LatoLatin-Bold.woff2') format('woff2'), 
-             url('fonts/LatoLatin-Bold.woff') format('woff'),
-             url('fonts/LatoLatin-Bold.ttf')  format('truetype');
-        font-display: optional;
-      } */
       * {
         margin: 0;
         padding: 0;
       }
       body {
-        font-family: Verdana, Georgia, serif;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         padding: 12px 24px;
         color: #454545;
       }
@@ -52,7 +34,7 @@
         font-size: calc(20px + (26 - 20) * ((100vw - 300px) / (1600 - 300)));
       }
       p, li {
-        line-height: calc(24px + (32 - 24) * ((100vw - 300px) / (1600 - 300)));
+        line-height: calc(24px + (36 - 27) * ((100vw - 300px) / (1600 - 300)));
         font-size: calc(18px + (24 - 18) * ((100vw - 300px) / (1600 - 300)));
       }
 
@@ -60,7 +42,7 @@
         margin-top: calc(16px + (24 - 16) * ((100vw - 300px) / (1600 - 300)));
       }
 
-      h3 + video, h3 + img {
+      video, img:not(#profile) {
         margin: 8px 0px;
       }
 
@@ -82,15 +64,28 @@
         color: inherit;
         text-decoration: none;
       }
-
+      @media only screen and (min-width: 900px) and (max-width: 1200px) {
+        body {
+          padding: 32px;
+        }
+        article {
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
       @media only screen and (min-width: 1200px) {
         body {
           display: flex;
+          padding: 32px 48px;
+        }
+        article {
+          display: block;
+          max-width: calc(700px + 10vw);
         }
         nav {
           display: block;
           width: 300px;
-          margin-right: 40px;
+          margin-right: calc(10vw - 100px);
         }
 
         nav li {
