--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
           margin-bottom: 8px;
         }
       }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #222222;
+          color: rgb(238, 238, 238);
+        }
+        a {
+          color: #23c19d
+        }
+      }
     </style>
   </head>
 
