--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Portfolio | Lennert Van Sever</title>
     <meta name="description" content="Web developer with 4 years of professional experience. Feel free to checkout my projects!" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="images/profile-big.jpg">     
+    <meta property="og:image" content="images/profile-big.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">     
     <style>
       * {
         margin: 0;
