small content change

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             Your browser does not support HTML5 video.
           </video>
           <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistences.</p>
-          <p>For this project I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build, no UI library. It was a lot of fun to get the micro transitions just right. One of the challenges was integrating with SAP and having a better mobile experience through adding Progressive Web App (PWA) capabilities. One of my goals was to get a perfect lighthouse score through continous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
+          <p>For this project I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right. One of the challenges was integrating with SAP and having a better mobile experience through adding Progressive Web App (PWA) capabilities. One of my goals was to get a perfect lighthouse score through continous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
         </section>
         <section>
           <h3>NutriGuide - Borealis Digital Studio</h3>
